My first commit

--- a/automaticaycontrol/src/main/resources/application.properties
+++ b/automaticaycontrol/src/main/resources/application.properties
@@ -1,19 +1,20 @@
 #spring.application.name=automaticaycontrol
-spring.datasource.url = jdbc:mysql://localhost/autoycontroldb
-spring.datasource.username = root
-spring.datasource.password = Ruben123
+##################################################3333
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_PASSWORD}
+###################################333333
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.format_sql=true
-
 ############################################  Enviando emails
-spring.mail.host=smtp-relay.brevo.com
+spring.mail.host=${SM_HOST}
 spring.mail.port=587
-spring.mail.username=8a11a0001@smtp-brevo.com
-spring.mail.password=QFU0pY467yH3XKM5
+spring.mail.username=${SM_USER_NAME}
+spring.mail.password=${SM_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.starttls.enable=true
 spring.mail.properties.mail.starttls.required=true
 
 emails.sender_email=autoycontrolinfo@gmail.com
-emails.sender_name=Easiercomp
+emails.sender_name=Automática y Control
 emails.sender_address=Cra 45 64 B sur 08, Sabaneta, Antioquia, Colombia
